<resources>
    <string name="app_name">BloodBank</string>
    <string name="enter_phone">Enter your Phone number</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="button_confirm">Confirm</string>
    <string name="welcome">Welcome to the Android Blood Bank</string>
    <string name="already_registered">Already Registered</string>
    <string name="new_register">Register new Account</string>
    <string name="choose_options_login">Choose one of the following Option</string>
    <string name="verify_phone">Please verify phone by entering the verification code sent to your phone number</string>
    <string name="button_verify">Verify</string>
    <string name="hint_confirmation">6 digit Confirmation code</string>
</resources>
